# go-and-python

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: Dockerfile  main.py  requirements.txt
app_go/: Dockerfile  go.mod  go.sum  main_app.go
config/: nginx.conf
upstream_service/: Dockerfile  upstream_app.py
upstream_service_go/: Dockerfile  go.mod  go.sum  upstream_app.go
